Fix css to comply with old browsers
* Format CSS with parent on every element
* Hide scrollbar in module view content

--- a/scilog/src/app/overview/logbook-cover/logbook-cover.component.css
+++ b/scilog/src/app/overview/logbook-cover/logbook-cover.component.css
@@ -2,120 +2,118 @@
 
   width: 300px;
   height: 400px;
+}
 
-  .mat-card-content {
+.logbook-module .mat-card-content {
     padding: 15px;
     height: 170px;
     overflow-y: scroll;
-  }
+    scrollbar-width: none;
+}
 
-  .mat-card-title {
-    width: 100%;
-    height: 30px;
-    display: inline-flex;
-  }
+.logbook-module .mat-card-header .mat-card-title {
+  width: 100%;
+  height: 30px;
+  display: inline-flex;
+}
 
-  .image-container {
-    text-align: center;
-  }
+.logbook-module .image-container {
+  text-align: center;
+}
 
-  img {
-    max-width: 250px;
-    height: 80px;
-    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .2), 0 2px 8px 0 rgba(0, 0, 0, .14), 0 4px 8px -1px rgba(0, 0, 0, .12);
-  }
+.logbook-module .mat-fab-top-right {
+  position: absolute;
+  top: 5px;
+  right: 1px;
+  z-index: 100;
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+}
 
-  .mat-fab-top-right {
-    position: absolute;
-    top: 5px;
-    right: 1px;
-    z-index: 100;
-    display: flex;
-    flex-direction: column-reverse;
-    align-items: center;
-  }
+.logbook-module .mat-card-actions {
+  width: 300px;
+  align-items: center;
+  text-align: center;
+  position: absolute;
+  bottom: 15px;
+}
 
-  .mat-card-actions {
-    width: 300px;
-    align-items: center;
-    text-align: center;
-    position: absolute;
-    bottom: 15px;
-  }
+.logbook-module mat-divider {
+  position: absolute;
+  bottom: 50px;
+}
 
-  mat-divider {
-    position: absolute;
-    bottom: 50px;
-  }
+.logbook-module img {
+  max-width: 250px;
+  height: 80px;
+  box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .2), 0 2px 8px 0 rgba(0, 0, 0, .14), 0 4px 8px -1px rgba(0, 0, 0, .12);
 }
 
 .logbook-headline {
-
   display: flex;
+}
 
-  .mat-fab-top-right {
-    position: absolute;
-    top: 1px;
-    right: 1px;
-    z-index: 100;
-    display: flex;
-    flex-direction: column-reverse;
-    align-items: center;
-  }
+.logbook-headline .mat-fab-top-right {
+  position: absolute;
+  top: 1px;
+  right: 1px;
+  z-index: 100;
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+}
 
+.logbook-headline .owner {
+  margin-bottom: -1px;
+  margin-right: 10px;
+  width: 10%;
+  overflow-x: scroll;
+  min-height: 20px;
+  scrollbar-width: none;
+}
 
-  .owner {
-    margin-bottom: -1px;
-    margin-right: 10px;
-    width: 10%;
-    overflow-x: scroll;
-    min-height: 20px;
-    scrollbar-width: none;
-  }
+.logbook-headline .date {
+  font-size: small;
+  margin: 15px;
+  width: 10%;
+}
 
-  .date {
-    font-size: small;
-    margin: 15px;
-    width: 10%;
-  }
+.logbook-headline .description {
+  width: 20%;
+  overflow-x: scroll;
+  word-wrap: break-word;
+  min-height: 20px;
+  margin-bottom: 1px;
+  margin-right: 10px;
+  scrollbar-width: none;
+}
 
-  .description {
-    width: 20%;
-    overflow-x: scroll;
-    word-wrap: break-word;
-    min-height: 20px;
-    margin-bottom: 1px;
-    margin-right: 10px;
-    scrollbar-width: none;
-  }
+.logbook-headline .title {
+  width: 40%;
+  overflow-x: scroll;
+  word-wrap: break-word;
+  min-height: 20px;
+  margin-bottom: 1px;
+  margin-right: 10px;
+  scrollbar-width: none;
+}
 
-  .title {
-    width: 40%;
-    overflow-x: scroll;
-    word-wrap: break-word;
-    min-height: 20px;
-    margin-bottom: 1px;
-    margin-right: 10px;
-    scrollbar-width: none;
-  }
+.logbook-headline img {
+  max-height: 35px;
+  max-width: 35px;
+  box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .2), 0 2px 8px 0 rgba(0, 0, 0, .14), 0 4px 8px -1px rgba(0, 0, 0, .12);
+}
 
-  img {
-    max-height: 35px;
-    max-width: 35px;
-    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .2), 0 2px 8px 0 rgba(0, 0, 0, .14), 0 4px 8px -1px rgba(0, 0, 0, .12);
-  }
-
-  .card-container {
-    height: 10px;
-    flex: 1 1 auto;
-    display: flex;
-    flex-direction: column;
-    align-content: flex-start;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    margin-right: 10px;
-    overflow-x: clip;
-  }
-
+.logbook-headline .card-container {
+  height: 10px;
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
+  align-content: flex-start;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-right: 10px;
+  overflow-x: clip;
 }
